With docs release (#1)
* test: Orchestra Testbench added in require dev

* test: Autoload Namespace fixed

* test: BaseTestCase extended in test

* fix(test): Memory removed with sqlite migration

* test: Inactive tests added

* fix(test): Sluggable config added in basecase

* test: Slug Tests added

* test: Latitude and Longitude tests added

* With docs release yaml

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "AchyutN\\LaravelHelpers\\Tests\\": "tests/"
         }
     },
     "authors": [
@@ -40,7 +40,8 @@
         "cviebrock/eloquent-sluggable": "^10.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0|^8.0|^9.0|^10.0"
+        "phpunit/phpunit": "^7.0|^8.0|^9.0|^10.0",
+        "orchestra/testbench": "^8.19"
     },
     "extra": {
         "laravel": {
