--- a/.github/workflows/tagrelease.yml
+++ b/.github/workflows/tagrelease.yml
@@ -22,3 +22,5 @@ jobs:
 #          body: ${{ steps.tag_version.outputs.changelog }}
       - name: Docs Release
         uses: achyutkneupane/Markdown-Docs@action
+        with:
+          branch: master
