Username to user

--- a/.github/workflows/tagrelease.yml
+++ b/.github/workflows/tagrelease.yml
@@ -24,7 +24,7 @@ jobs:
         uses: achyutkneupane/Markdown-Docs@action
         with:
           ssh_host: ${{ secrets.SSH_HOST }}
-          ssh_username: ${{ secrets.SSH_USERNAME }}
+          ssh_user: ${{ secrets.SSH_USERNAME }}
           ssh_key: ${{ secrets.SSH_KEY }}
           ssh_port: ${{ secrets.SSH_PORT }}
           ssh_path: ${{ secrets.SSH_PATH }}
